--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,10 @@
-header{
-    background-color: #EAC926;
+body{
+    background-color: #FFD700;
 }
-#barra{
+#buscador{
     text-align: center;
 }
-#Compraencuota{
+#compraencuota{
     text-align: center;
 }
 li{
