--- a/views/home.html
+++ b/views/home.html
@@ -9,8 +9,13 @@
 </head>
 <body>
      <img src="/img/logo-mercado-liebre.svg" height="30" alt="Logo">
-     <div id="barra"><button id="boton" type="button">Barra de busqueda</button></div>
-     <p id="Compraencuota">Compra en cuota y sin tarejta de crédito</p>
+     <div id="buscador">
+         <form action="">
+         <input type="text" />
+         <button>Buscar</button>
+        </form>
+     </div>
+     <p id="compraencuota">Compra en cuota y sin tarejta de crédito</p>
      <nav>
          <ul>
              <li>Ofertas</li>
@@ -64,18 +69,18 @@
         </section>
     </main>
     <footer>
-        <section>
-            <p><b id="paga">Pagá con tarjeta o en efectivo</b></p>
+        <section>..
+            <p id="paga"><b>Pagá con tarjeta o en efectivo</b></p>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </section>
         <section>
-            <p><b id="envio">Envío gratis desde $ 2.500</b></p>
+            <p id="envio"><b>Envío gratis desde $ 2.500</b></p>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
         <section>
-            <p><b id="seguridad">Seguridad, de principio a fin</b></p>
+            <p id="seguridad"><b>Seguridad, de principio a fin</b></p>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
