--- a/views/home.html
+++ b/views/home.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+    <script src="https://kit.fontawesome.com/47f954a9fa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+    <header class="body__header">
      <img src="/img/logo-mercado-liebre.svg" height="30" alt="Logo">
-     <div id="buscador">
+     <div class="body__header--buscar">
          <form action="">
-         <input type="text" />
+         <input type="text" placeholder="Buscar productos, marcas, etc"/>
          <button>Buscar</button>
         </form>
      </div>
-     <p id="compraencuota">Compra en cuota y sin tarejta de crédito</p>
+     <p class="compra"><i class="fa-solid fa-hand-holding-dollar"></i>Compra en cuota y sin tarejta de crédito</p>
      <nav>
          <ul>
              <li>Ofertas</li>
@@ -24,68 +26,82 @@
              <li>Ayuda</li>
          </ul>
          <ul>
-             <li>Creá tu cuenta</li>
-             <li>Ingresá</li>
-             <li>Mis compras</li>
+             <li>Creá tu cuenta<i class="fa-solid fa-id-card"></i>
+             </li>
+             <li>Ingresá<i class="fa-solid fa-right-to-bracket"></i></li>
+             <li>Mis compras<i class="fa-solid fa-basket-shopping"></i></i>
+             </li>
          </ul>
      </nav>
-     <img src="/img/img-home-banner.jpg" height="100">
+     <div class="burger-menu">
+        <i class="fas fa-bars"></i>
+        </div>
+     <img src="/img/img-home-banner.jpg" height="71">
     </header>
     <main>
         <section>
             <h3>Basado en tu última visita</h3>
             <img src="/img/img-cafetera-moulinex.jpg" height="100">
-            <p>$6.770 <br></p><p>40% OFF </p><p>Cafetera Moulinex</p>   
+            <p class="precio">$6.770 <br></p><p class="descuento">40% OFF </p><p class="descripcion"> </p>Cafetera Moulinex</p>   
         </section>
         <section>
             <img src="/img/img-macbook-pro-2019.jpg" height="100">
-            <p>$230.000 <br></p><p>20% off</p><p>MacBook Pro 2019</p>
+            <p class="precio">$230.000 <br></p><p>20% off</p><p class="descripcion">MacBook Pro 2019 </p></p>
              </section>
         <section>
             <img src="/img/img-samsung-galaxy-s10.jpg" height="100">
-            <p>$70.500 <br></p><p>10% off</p><p> Samsung Galaxy S10</p>
+            <p class="precio">$70.500 <br></p><p class="descuento">10% off</p><p class="descripcion"> Samsung Galaxy S10</p></p>
         </section>
         <section>
             <img src="/img/img-tv-samsung-smart.jpg" height="100">
-            <p>$23.200 <br></p><p> 5% off</p><p> SmartTv Samsung 43"</p>
+            <p class="precio">$23.200 <br></p><p class="descuento"> 5% off</p><p class="descripcion"> SmartTv Samsung 43"</p></p></p>
         </section>
         <section>
             <h3>Sección de Ofertas</h3>
             <img src="/img/img-cafetera-moulinex.jpg" height="100">
-            <p>$6.770 <br></p><p> 40% OFF </p><p> Cafetera Moulinex</p>   
+            <p class="precio">$6.770 <br></p><p class="descuento"> 40% OFF </p><p class="descripcion">Cafetera Moulinex</p></p>   
         </section>
         <section>
             <img src="/img/img-macbook-pro-2019.jpg" height="100">
-            <p>$230.000 <br></p><p> 20% off</p><p>MacBook Pro 2019</p>
+            <p class="precio">$230.000 <br></p><p class="descuento"> 20% off</p><p class="descripcion"> MacBook Pro 2019</p></p>
              </section>
         <section>
             <img src="/img/img-samsung-galaxy-s10.jpg" height="100">
-            <p>$70.500 <br></p><p> 10% off</p><p> Samsung Galaxy S10</p>
+            <p class="precio">$70.500 <br></p><p class="descuento"> 10% off</p><p class="descripcion">Samsung Galaxy S10</p></p>
         </section>
         <section>
             <img src="/img/img-tv-samsung-smart.jpg" height="100">
-            <p>$23.200 <br></p><p>5% off</p><p> SmartTv Samsung 43"</p>
+            <p class="precio">$23.200 <br></p><p class="descuento">5% off</p><p class="descripcion"> SmartTv Samsung 43"</p>
 
         </section>
     </main>
     <footer>
-        <section>..
-            <p id="paga"><b>Pagá con tarjeta o en efectivo</b></p>
+        <section class="footer__section"> 
+            <div class="footer_section--icono">
+            <i class="fa-solid fa-credit-card"></i>
+        </div>
+            <p><b>Pagá con tarjeta o en efectivo</b></p>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </section>
         <section>
-            <p id="envio"><b>Envío gratis desde $ 2.500</b></p>
+            <div class="footer_section--icono">
+            <i class="fa-solid fa-gift"></i>
+        </div>
+            <p><b>Envío gratis desde $ 2.500</b></p>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
         <section>
-            <p id="seguridad"><b>Seguridad, de principio a fin</b></p>
+            <div class="footer_section--icono">
+            <i class="fa-solid fa-user-shield"></i>
+        </div>
+            <p><b></i>Seguridad de principio a fin</b></p>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
         <section>
-            <p id="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
 </body>
