--- a/views/home.html
+++ b/views/home.html
@@ -36,45 +36,55 @@
      <div class="burger-menu">
         <i class="fas fa-bars"></i>
         </div>
-     <img src="/img/img-home-banner.jpg" height="71">
+     <div class="banner"><img class="header--banner" src="/img/img-home-banner.jpg" ></div>
     </header>
     <main>
-        <section>
-            <h3>Basado en tu última visita</h3>
-            <img src="/img/img-cafetera-moulinex.jpg" height="100">
-            <p class="precio">$6.770 <br></p><p class="descuento">40% OFF </p><p class="descripcion"> </p>Cafetera Moulinex</p>   
-        </section>
-        <section>
-            <img src="/img/img-macbook-pro-2019.jpg" height="100">
-            <p class="precio">$230.000 <br></p><p>20% off</p><p class="descripcion">MacBook Pro 2019 </p></p>
-             </section>
-        <section>
-            <img src="/img/img-samsung-galaxy-s10.jpg" height="100">
-            <p class="precio">$70.500 <br></p><p class="descuento">10% off</p><p class="descripcion"> Samsung Galaxy S10</p></p>
-        </section>
-        <section>
-            <img src="/img/img-tv-samsung-smart.jpg" height="100">
-            <p class="precio">$23.200 <br></p><p class="descuento"> 5% off</p><p class="descripcion"> SmartTv Samsung 43"</p></p></p>
-        </section>
-        <section>
+         <h3>Basado en tu última visita</h3>
+         <section>
+             <article>
+            <div class="img"><img src="/img/img-cafetera-moulinex.jpg" height="100" alt=""></div>
+            <div class="detalle">
+                <i class="fa-solid fa-truck"></i><p class="precio">$6.770</p><p class="descuento">40% OFF</p><p class="descripcion">Cafetera Moulinex</p></div> 
+            </article>
+            <article>
+            <div class="img"><img src="/img/img-macbook-pro-2019.jpg" height="100"></div>
+            <div class="detalle">
+                <i class="fa-solid fa-truck"></i><p class="precio">$230.000 <br></p><p>20% off</p><p class="descripcion">MacBook Pro 2019 </p></p></div> 
+            </article>
+            <article>
+            <div class="img"><img src="/img/img-samsung-galaxy-s10.jpg" height="100"></div>
+            <div class="detalle">
+                <i class="fa-solid fa-truck"></i><p class="precio">$70.500 <br></p><p class="descuento">10% off</p><p class="descripcion"> Samsung Galaxy S10</p></p></div>
+            </article>
+            <article>
+            <div class="img"><img src="/img/img-tv-samsung-smart.jpg" height="100"></div>
+            <div class="detalle">
+                <i class="fa-solid fa-truck"></i><p class="precio">$23.200 <br></p><p class="descuento"> 5% off</p><p class="descripcion"> SmartTv Samsung 43"</p></p></p></div>
+            </article>
             <h3>Sección de Ofertas</h3>
-            <img src="/img/img-cafetera-moulinex.jpg" height="100">
-            <p class="precio">$6.770 <br></p><p class="descuento"> 40% OFF </p><p class="descripcion">Cafetera Moulinex</p></p>   
-        </section>
-        <section>
-            <img src="/img/img-macbook-pro-2019.jpg" height="100">
-            <p class="precio">$230.000 <br></p><p class="descuento"> 20% off</p><p class="descripcion"> MacBook Pro 2019</p></p>
-             </section>
-        <section>
-            <img src="/img/img-samsung-galaxy-s10.jpg" height="100">
-            <p class="precio">$70.500 <br></p><p class="descuento"> 10% off</p><p class="descripcion">Samsung Galaxy S10</p></p>
-        </section>
-        <section>
-            <img src="/img/img-tv-samsung-smart.jpg" height="100">
-            <p class="precio">$23.200 <br></p><p class="descuento">5% off</p><p class="descripcion"> SmartTv Samsung 43"</p>
-
-        </section>
+            <article>
+            <div class="img"><img src="/img/img-cafetera-moulinex.jpg" height="100"></div>
+            <div class="detalle">
+                <i class="fa-solid fa-truck"></i><p class="precio">$6.770 <br></p><p class="descuento"> 40% OFF </p><p class="descripcion">Cafetera Moulinex</p></p></div>  
+            </article>
+            <article>
+            <div class="img"><img src="/img/img-macbook-pro-2019.jpg" height="100"></div>
+            <div class="detalle">
+                <i class="fa-solid fa-truck"></i><p class="precio">$230.000 <br></p><p class="descuento"> 20% off</p><p class="descripcion"> MacBook Pro 2019</p></p></div>
+            </article>
+             <article>
+            <div class="img"><img src="/img/img-samsung-galaxy-s10.jpg" height="100"></div>
+            <div class="detalle">
+                <i class="fa-solid fa-truck"></i><p class="precio">$70.500 <br></p><p class="descuento"> 10% off</p><p class="descripcion">Samsung Galaxy S10</p></p></div>
+            </article>
+            <article>
+            <div class="img"><img src="/img/img-tv-samsung-smart.jpg" height="100"></div>
+            <div class="detalle">
+                <i class="fa-solid fa-truck"></i> <p class="precio">$23.200 <br></p><p class="descuento">5% off</p><p class="descripcion"> SmartTv Samsung 43"</p></div>
+            </article>
+     </section>
     </main>
+    <hr>
     <footer>
         <section class="footer__section"> 
             <div class="footer_section--icono">
