--- a/views/home.html
+++ b/views/home.html
@@ -111,7 +111,7 @@
                 porque estás siempre protegid@.</p>
         </section>
         <section>
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+            <p class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
 </body>
