--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,7 @@
      <div class="body__header--buscar">
          <form action="">
          <input type="text" placeholder="Buscar productos, marcas, etc"/>
-         <button>Buscar</button>
+         <button><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
      </div>
      <p class="compra"><i class="fa-solid fa-hand-holding-dollar"></i>Compra en cuota y sin tarejta de crédito</p>
@@ -36,7 +36,7 @@
      <div class="burger-menu">
         <i class="fas fa-bars"></i>
         </div>
-     <div class="banner"><img class="header--banner" src="/img/img-home-banner.jpg" ></div>
+     <div class="banner"><img src="/img/img-home-banner.jpg" ></div>
     </header>
     <main>
          <h3>Basado en tu última visita</h3>
@@ -44,7 +44,8 @@
              <article>
             <div class="img"><img src="/img/img-cafetera-moulinex.jpg" height="100" alt=""></div>
             <div class="detalle">
-                <i class="fa-solid fa-truck"></i><p class="precio">$6.770</p><p class="descuento">40% OFF</p><p class="descripcion">Cafetera Moulinex</p></div> 
+                <i class="fa-solid fa-truck">    
+                </i><p class="precio">$6.770</p><p class="descuento">40% OFF</p><p class="descripcion">Cafetera Moulinex</p></div> 
             </article>
             <article>
             <div class="img"><img src="/img/img-macbook-pro-2019.jpg" height="100"></div>
