--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,24 +13,27 @@ body{
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
+    background-color: var(--colorGrisClaro);
     
 }
-.detalle{
-    border-top: 1px solid #ebebeb;
-    padding: 15px;
+header{
+    background-color: var(--colorAmarillo);
+}
+article{
+    background-color: #ffff;
+    margin: 10px;
+}
+section img{
+    width: 50%;
 }
 .banner{
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-   
 }
 .img{
     padding-top: 10px;
-}
-
-footer{
-    text-align: center;
+    width: 70%;
 }
 .body__header--buscar{
     text-align: center;
@@ -40,8 +43,6 @@ ul, li{
     padding: 0;
     margin-bottom: 7px;
 }
-
-
 .compra{
     text-align: center;
 }
@@ -54,21 +55,24 @@ ul, li{
     padding: 5px;
     border-radius: 20%;
 }
-header{
-    background-color: var(--colorAmarillo);
-
-}
 h3{
     font-size: var(--tamañoTitulares);
 }
 .precio{
     font-size: var(--tamañoPrecios);
+    display: inline;
 }
 .descuento .descripcion{
     font-size: var(--tamañoDescuentosDescripciones);
 }
 .descuento{
     color: var(--colorVerde);
+    display: inline;
+}
+.detalle{
+    border-top: 1px solid #ebebeb;
+    padding: 15px;
+    position: relative;
 }
 .fa-truck {
     border: 1px solid var(--colorVerde);
@@ -83,5 +87,7 @@ h3{
     margin-bottom: 10px;
     color: #1259c3;
 }
-
+footer{
+    text-align: center;
+}
 
