--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;900&display=swap');
 @import './general.css';
 @import './home.css';
+@import './register.css';
+@import './login.css'
