--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
     <header class="body__header">
         <div class="encabezado">
      <img class="logo" src="/img/logo-mercado-liebre.svg" height="30" alt="Logo">
-     <div class="body__header--buscar">
+     <div class="header--buscar">
          <form action="">
          <input type="text" placeholder="Buscar productos, marcas, etc"/>
          <button><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -29,8 +29,8 @@
              <li>Ayuda</li>
          </ul>
          <ul class="home_nav--user">
-             <li>Creá tu cuenta<i class="fa-solid fa-id-card"></i></li>
-              <li>Ingresá<i class="fa-solid fa-right-to-bracket"></i></li>
+             <a href="./register"><li>Crear tu cuenta<i class="fa-solid fa-id-card"></i></li></a>
+              <a href="./login"><li>Ingresá<i class="fa-solid fa-right-to-bracket"></i></li></a>
              <li>Mis compras<i class="fa-solid fa-basket-shopping"></i></i>
              </li>
          </ul>
