agregue clase en form

--- a/views/login.html
+++ b/views/login.html
@@ -40,7 +40,7 @@
                </div>
     </header>
     <main>
-        <form action="">
+        <form action="" class="form">
         <input class="input_usuario" type="text" name="name" placeholder="Nombre de usuario">
         <input class="input_usuario" type="password" name="password" placeholder="Elegí tu contraseña">
         <button class="form_button" type="submit">Enviar</button>
