--- a/views/register.html
+++ b/views/register.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <a href="/"><h4 class="Volver">Volver al Inicio</h4></a>
-        <form action="">
+        <form action="" class="form1">
             <input class="input_datos" type="text" name="name" placeholder="Nombre y Apellido">
             <input class="input_datos" type="text" name="name" placeholder="Nombre de usuario">
             <input class="input_datos" type="email" name="email" placeholder="Email">
