--- a/views/home.html
+++ b/views/home.html
@@ -7,6 +7,10 @@
     <title>Mercado Liebre</title>
     <script src="https://kit.fontawesome.com/47f954a9fa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        a { text-decoration: none; 
+            color: black;} 
+        </style>
 </head>
 <body>
     <header class="body__header">
