--- a/views/login.html
+++ b/views/login.html
@@ -7,6 +7,10 @@
     <title>Login</title>
     <script src="https://kit.fontawesome.com/47f954a9fa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        a { text-decoration: none; 
+            color: black;} 
+        </style>
 </head>
 <body>
     <header>
@@ -43,7 +47,7 @@
         <form action="" class="form">
         <input class="input_usuario" type="text" name="name" placeholder="Nombre de usuario">
         <input class="input_usuario" type="password" name="password" placeholder="Elegí tu contraseña">
-        <button class="form_button" type="submit">Enviar</button>
+        <button class="form_button" type="submit"><a href="/">Enviar</a></button>
     </form>
     </main>
     <hr>
