--- a/views/home.html
+++ b/views/home.html
@@ -46,83 +46,85 @@
     </header>
     <main>
          <h3>Basado en tu última visita</h3>
-         <section>
-             <article>
+         <section class="caja_section">
+             <article class="caja_padre">
             <div class="img"><img src="/img/img-cafetera-moulinex.jpg"  width="200"></div>
             <div class="detalle">
                 <i class="fa-solid fa-truck">    
-                </i><p class="precio">$6.770</p><p class="descuento">40% OFF</p><p class="descripcion">Cafetera Moulinex</p></div> 
+                </i><p class="precio">$6.770</p><p class="descuento">40% OFF</p><p class="descripcion">Cafetera Moulinex</p>
+            </div> 
             </article>
-            <article>
+            <article class="caja_padre">
             <div class="img"><img src="/img/img-macbook-pro-2019.jpg" width="200"></div>
             <div class="detalle">
                 <i class="fa-solid fa-truck"></i>
-                <p class="precio">$230.000 </p><p class="descuento">20% off</p><p class="descripcion">MacBook Pro 2019 </p></p></div> 
+                <p class="precio">$230.000 </p><p class="descuento">20% off</p><p class="descripcion">MacBook Pro 2019 </p></p>
+            </div> 
             </article>
-            <article>
+            <article class="caja_padre">
             <div class="img"><img src="/img/img-samsung-galaxy-s10.jpg" width="200" ></div>
             <div class="detalle">
-                <i class="fa-solid fa-truck"></i><p class="precio">$70.500 </p><p class="descuento">10% off</p><p class="descripcion"> Samsung Galaxy S10</p></p></div>
+                <i class="fa-solid fa-truck"></i><p class="precio">$70.500 </p><p class="descuento">10% off</p><p class="descripcion"> Samsung Galaxy S10</p></p>
+            </div>
             </article>
-            <article>
+            <article class="caja_padre">
             <div class="img"><img src="/img/img-tv-samsung-smart.jpg" width="200"></div>
             <div class="detalle">
-                <i class="fa-solid fa-truck"></i><p class="precio">$23.200 </p><p class="descuento"> 5% off</p><p class="descripcion"> SmartTv Samsung 43"</p></p></p></div>
+                <i class="fa-solid fa-truck"></i><p class="precio">$23.200 </p><p class="descuento"> 5% off</p><p class="descripcion"> SmartTv Samsung 43"</p></p></p>
+            </div>
             </article>
             </section>
             <h3>Sección de Ofertas</h3>
-            <section>
-            <article>
+            <section class="caja_section">
+            <article class="caja_padre">
             <div class="img"><img src="/img/img-cafetera-moulinex.jpg" width="200"></div>
             <div class="detalle">
                 <i class="fa-solid fa-truck"></i><p class="precio">$6.770 </p><p class="descuento"> 40% OFF </p><p class="descripcion">Cafetera Moulinex</p></p></div>  
             </article>
-            <article>
+            <article class="caja_padre">
             <div class="img"><img src="/img/img-macbook-pro-2019.jpg"  width="200"></div>
             <div class="detalle">
                 <i class="fa-solid fa-truck"></i><p class="precio">$230.000 </p><p class="descuento"> 20% off</p><p class="descripcion"> MacBook Pro 2019</p></p></div>
             </article>
-             <article>
+             <article class="caja_padre">
             <div class="img"><img src="/img/img-samsung-galaxy-s10.jpg"  width="200"></div>
             <div class="detalle">
                 <i class="fa-solid fa-truck"></i><p class="precio">$70.500 </p><p class="descuento"> 10% off</p><p class="descripcion">Samsung Galaxy S10</p></p></div>
             </article>
-            <article>
+            <article class="caja_padre">
             <div class="img"><img src="/img/img-tv-samsung-smart.jpg" width="200"></div>
             <div class="detalle">
                 <i class="fa-solid fa-truck"></i> <p class="precio">$23.200 </p><p class="descuento">5% off</p><p class="descripcion"> SmartTv Samsung 43"</p></div>
             </article>
-     </section>
+            </section>
     </main>
     <hr>
     <footer>
         <section class="footer__section"> 
             <div class="footer_section--icono">
             <i class="fa-solid fa-credit-card"></i>
-        </div>
+            </div>
             <p><b>Pagá con tarjeta o en efectivo</b></p>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </section>
-        <section>
+        <section class="footer__section">
             <div class="footer_section--icono">
             <i class="fa-solid fa-gift"></i>
-        </div>
+            </div>
             <p><b>Envío gratis desde $ 2.500</b></p>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
-        <section>
+        <section class="footer__section">
             <div class="footer_section--icono">
             <i class="fa-solid fa-user-shield"></i>
-        </div>
-            <p><b></i>Seguridad de principio a fin</b></p>
+            </div>
+            <p><b>Seguridad de principio a fin</b></p>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
-        <section>
-            <p class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-        </section>
     </footer>
+    <p class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
 </body>
 </html>
