--- a/views/login.html
+++ b/views/login.html
@@ -43,12 +43,12 @@
                <i class="fas fa-bars"></i>
                </div>
     </header>
-    <main>
+    <main class="main_login">
         <form action="" class="form">
         <input class="input_usuario" type="text" name="name" placeholder="Nombre de usuario">
         <input class="input_usuario" type="password" name="password" placeholder="Elegí tu contraseña">
         <button class="form_button" type="submit"><a href="/">Enviar</a></button>
-    </form>
+        </form>
     </main>
     <hr>
     <footer>
@@ -76,9 +76,7 @@
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
-        <section>
-            <p class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-        </section>
     </footer>
+    <p class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
 </body>
 </html>
